[workspace]

members = ["lyre", "melody", "verse"]

[package]
name = "orpheus"
version = "0.1.0"
edition = "2021"
include = ["generated", "content", "web"]

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
http-body-util = "0.1.2"
maud = { version = "0.26.0" }
serde = { version = "1.0.217" }
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = [
    "fs",
    "trace",
    "compression-br",
    "compression-deflate",
    "compression-gzip",
    "compression-zstd",
    "normalize-path",
] }
tower-livereload = "0.9.5"
tower = "0.5.2"
axum-htmx = { version = "0.6.0", features = ["serde"] }
axum-extra = { version = "0.10.0", features = ["query"] }
serde_html_form = "0.2.7"
serde_json = "1.0.137"

verse = { path = "./verse" }
tantivy = "0.22.0"
