[package]
name = "lyre"
version = "0.1.0"
edition = "2021"
description = "Orpheus companion tool -- manages, generates, and builds content"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"
sha2 = { version = "0.10.8" }
base64 = { version = "0.22.1" }
eyre = "0.6.12"
color-eyre = "0.6.3"
colored = "2.1.0"
slug = "0.1.5"
grass = "0.13.3"
pandoc = "0.8.11"
verse = { path = "../verse" }
melody = { path = "../melody" }
syntect = "5.2.0"
pandoc_ast = "0.8.6"
glob = "0.3.1"
clap = { version = "4.5.11", features = ["derive"] }
chrono = "0.4.38"
tantivy = "0.22.0"
