[package]
name = "lyre"
version = "0.1.0"
edition = "2021"
description = "Orpheus companion tool -- manages, generates, and builds content"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
sha2 = { version = "0.10.8" }
base64 = { version = "0.22.1" }
eyre = "0.6.12"
color-eyre = "0.6.3"
colored = "3.0.0"
slug = "0.1.6"
grass = "0.13.4"
pandoc = "0.8.11"
verse = { path = "../verse" }
syntect = "5.2.0"
pandoc_ast = "0.8.6"
glob = "0.3.2"
clap = { version = "4.5.29", features = ["derive"] }
chrono = "0.4.40"
tantivy = "0.22.0"
inquire = "0.7.5"
simple_search = "0.2.1"
