[package]
name = "orpheus"
version = "0.1.0"
edition = "2021"
include = ["generated", "content", "web"]

[dependencies]
axum = { version = "0.8.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["query"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = [
    "fs",
    "trace",
    "compression-br",
    "compression-deflate",
    "compression-gzip",
    "compression-zstd",
    "normalize-path",
] }
tower-livereload = "0.9.6"
serde = { version = "1.0.219" }
serde_html_form = "0.2.7"
maud = { version = "0.26.0", features = ["axum"] }

verse = { path = "../verse" }
tantivy = "0.25.0"
